--- a/.gitignore
+++ b/.gitignore
@@ -121,7 +121,7 @@ venv.bak/
 pip-selfcheck.json
 
 ### VisualStudioCode ###
-.vscode/*
+.vscode/
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
