--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ bs4==0.0.1
 certifi==2020.4.5.1
 chardet==3.0.4
 click==7.1.1
+cloudscraper==1.2.40
 dnspython==1.16.0
 Flask==1.1.2
 idna==2.9
@@ -13,8 +14,10 @@ MarkupSafe==1.1.1
 mysql-connector-python==8.0.19
 protobuf==3.6.1
 pycodestyle==2.5.0
+pyparsing==2.4.7
 python-dotenv==0.13.0
 requests==2.23.0
+requests-toolbelt==0.9.1
 six==1.14.0
 soupsieve==2.0
 urllib3==1.25.9
