--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ click==7.1.1
 cloudscraper==1.2.40
 dnspython==1.16.0
 Flask==1.1.2
+gunicorn==20.0.4
 idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.2
