--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,17 @@ pip-selfcheck.json
 # Custom
 debug/
 LOGFILE
+
+
+# Created by https://www.toptal.com/developers/gitignore/api/database
+# Edit at https://www.toptal.com/developers/gitignore?templates=database
+
+### Database ###
+*.accdb
+*.db
+*.dbf
+*.mdb
+*.pdb
+*.sqlite3
+
+# End of https://www.toptal.com/developers/gitignore/api/database
